[metadata]
name = pluto_tv_m3u8
version = 0.0.2
author = NicKoehler
author_email = grillinicolavocal@gmail.com
description = A simple m3u8 generator for pluto-tv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickoehler/pluto_tv_m3u8
project_urls =
    Bug Tracker = https://github.com/nickoehler/pluto_tv_m3u8/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
